--- a/webpage.html
+++ b/webpage.html
@@ -9,4 +9,28 @@
 <h1>Education system in India</h1>
 <p>“Higher education in India has a rich legacy, starting from ancient universities like Nalanda and Takshashila to modern institutions like IITs, IIMs, and AIIMS. It reflects how our tradition of knowledge has evolved with time.”From the ancient seats of learning like Nalanda and Takshashila, where students from across the world came to study philosophy, medicine, astronomy, and literature, to the modern institutions like IITs, IIMs, and AIIMS, India’s journey of higher education has been remarkable. Ancient universities laid the foundation of intellectual curiosity and knowledge exchange, making India a global hub of learning. After independence, India carried this legacy forward by establishing premier institutions such as the Indian Institutes of Technology, Indian Institutes of Management, and the All India Institute of Medical Sciences, which symbolize excellence in science, technology, management, and healthcare. This journey reflects how India’s ancient tradition of knowledge connects with today’s modern educational system, continuing the vision of making the country a center of innovation, research, and global academic contribution.“In short, the journey of Indian higher education shows a strong connection between our glorious past and the modern present, positioning India as a global hub of learning and innovation.”</p>
 </html>
-"open in default browser" :"firefox"
+<h2> "Multimedia</h2>
+<video width="320" height="240" controls>
+    <source src ="movie.mp4" type ="video/mp4">
+    
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <body>
+  <title>My YouTube Video Page</title>
+</head>
+  <h2 style="text-align:center;">My YouTube Video</h2>
+
+  <div style="text-align:center;">
+    <iframe width="560" height="315"
+      src="https://www.youtube.com/o2xBENY0"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen>
+    </iframe>
+  </div>
+</body>
+</html>
+  
+    
