--- a/Booking_form.html
+++ b/Booking_form.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hotel Room Booking Form</title>
-  
+  <link rel="stylesheet" href="Booking_form.css">
+
 </head>
 
 <body>
