--- a/TT.html
+++ b/TT.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekly Timetable</title>
-    <link rel="stylesheet" href="TT.css"> //link the css file
+    <!--<link rel="stylesheet" href="TT.css"> //link the css file--->
 </head>
 
 <body>
