--- a/registrationform.html
+++ b/registrationform.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Registration Form</title>
-  
+  <link rel="stylesheet" href="registrationform.css">
 </head>
 
 <body>
