--- a/web_designing.html
+++ b/web_designing.html
@@ -43,7 +43,7 @@
             <tr>
                 <td class="day-cell weekend">
                     <span class="day-number">2</span>
-                    <span class="holiday">Vasant Panchami</span>
+                    <span class="holiday"> vasant Panchami</span>
                 </td>
                 <td><span class="day-number">3</span></td>
                 <td><span class="day-number">4</span></td>
@@ -97,7 +97,7 @@
                 
                 <td class="day-cell holiday" colspan="2" rowspan="2" style="background-color: #6a0dad; border-right: 3px solid yellow; padding: 10px;">
                     <span class="day-number" style="color: white; font-size: 1.1em;">**26** (Wed)</span>
-                    <span style="font-size: 1.1em;">🕉️ **Maha Shivaratri**</span>
+                    <span style="font-size: 1.1em;">🕉️ **Maha Shivratri**</span>
                     <hr style="border-color: yellow;">
                     <span style="display: block; font-size: 0.9em; color: white;">*Spans to the right*</span>
                 </td>
