--- a/registrationform.html
+++ b/registrationform.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <h1>🎓 Student Registration Form</h1>
+  <h1>🎓 Shivani pal</h1>
 
   <!-- Form starts here -->
   <form action="register_success.html" method="post">
