--- a/Jim_smit.html
+++ b/Jim_smit.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Global Times - Your Daily News</title>
+  <title>Introduction</title>
   <link rel="stylesheet" href="multimedia.css">
 
 
@@ -13,53 +13,28 @@
 
   <!-- Header -->
   <header>
-    <h1>Jim Smith</h1>
-    <p>"Jim Smith" can refer to several notable individuals, including an American animator and musician who co-founded Spümcø and died in 2025. Other prominent figures include a British author and illustrator known for the Barry Loser series, a British former professional footballer and manager, a scientist at the Francis Crick Institute who is also President of the Zoological Society of London, and a former CEO of Thomson Reuters. 
-Arts and entertainment </p>
+    <h1>Shivani Pal</h1>
+    <p>"I'm shivani pal pusuing btech [electrical and computer engineering from abes engineering college in ghaziabad </p>
   </header>
   
 
   <!-- Main News Section -->
   <section>
     <div class="main-article">
-      <h2>American animator</h2>
+      <h2>Engineering student</h2>
       <p>
-        Jim Smith (animator): American animator and musician who co-founded Spümcø and worked on Mighty Mouse: The New Adventures. He passed away on May 2, 2025.
-Jim Smith (author): British author and illustrator, creator of the Barry Loser children's book series. He also created the gift range Waldo Pancake and designed for Puccino Coffee. 
-Science and academia
+        I'm shivani pal pusuing btech [electrical and computer engineering from abes engineering college in ghaziabad .i am very passionate about coding and web development .i love to explore new technologies and frameworks .i am also interested in data science and machine learning .my hobbies are reading books ,watching movies and travelling .i am always eager to learn new things and take up new challenges .
 
       </p>
 
       <!-- Embedded Image -->
-      <img src="https://www.crick.ac.uk/sites/default/files/styles/hero/public/2018-07/18_332%20FCI%20JSmith-002.png?itok=HmTzQWn3" alt="Jim Smith">
-
-      <!-- Hyperlinks -->
-      <div class="links">
-        <p>Read more on:
-          <a href="https://www.crick.ac.uk/research/find-a-researcher/jim-smith#:~:text=Jim%20Smith%20is%20an%20Emeritus,the%20Academia%20Europaea%20in%202000." target="_blank">animator</a> |
-          <a href="https://en.wikipedia.org/wiki/Jim_Smith_(business_executive)#:~:text=James%20C.,on%20the%20board%20of%20Pfizer.&text=Pfizer%2C%20Inc." target="_blank">Business Executive</a> |
-          <a href="https://www.linkedin.com/in/jimsmith11/" target="_blank">linkedin</a>
-        </p>
-      </div>
-    </div>
+      <img src="" alt="shivani pal" class="embedded-image">
 
     <!-- Multimedia Section -->
     <div class="main-article">
-      <h2>jim smith intro</h2>
+      <h2>shivani intro</h2>
       <p>
-        "Jim Smith" can refer to several notable individuals, including an American animator and musician who co-founded Spümcø and died in 2025. Other prominent figures include a British author and illustrator known for the Barry Loser series, a British former professional footballer and manager, a scientist at the Francis Crick Institute who is also President of the Zoological Society of London, and a former CEO of Thomson Reuters. 
-Arts and entertainment
-Jim Smith (animator): American animator and musician who co-founded Spümcø and worked on Mighty Mouse: The New Adventures. He passed away on May 2, 2025.
-Jim Smith (author): British author and illustrator, creator of the Barry Loser children's book series. He also created the gift range Waldo Pancake and designed for Puccino Coffee. 
-Science and academia
-Jim Smith (scientist): Emeritus Scientist at the Francis Crick Institute and President of the Zoological Society of London. He is an accomplished developmental biologist who has received numerous awards.
-Professor Jim Smith: An academic at UWE Bristol specializing in evolutionary computation and artificial intelligence.
-Jim Smith (radiation expert): A researcher at the University of Portsmouth who supervises PhD students in radiation in the environment. 
-Business
-Jim C. Smith: American business executive who served as the former CEO of Thomson Reuters. He is also involved with the World Economic Forum and sits on the board of Pfizer. 
-Sports
-Jim Smith (footballer): English former professional footballer and manager who died in 2019. He played for clubs like Aldershot, Halifax Town, Lincoln City, and Colchester United, and managed several teams.
-Jim Smith (Maryland AD): Athletic Director for the University of Maryland's athletic programs. .
+         .
       </p>
     </div>
   </section>
