--- a/shivani_pal.html
+++ b/shivani_pal.html
@@ -70,7 +70,9 @@
 
     <section>
         <h2>Welcome to introduction page</h2>
-    <img> src="/Users/ShivaniPal/Desktop/Shivani Pal.png" alt="Shivani Pal"> </img>
+     <div class="image-section">
+            <img src="shivani.jpg" alt="Shivani Pal">
+        </div>
 
         <p>
            i m Shivani Pal student of ABES Engineering college pursuing B-tech in Computer Science Engineering.
