--- a/shivani_pal.html
+++ b/shivani_pal.html
@@ -71,7 +71,7 @@
     <section>
         <h2>Welcome to introduction page</h2>
      <div class="image-section">
-            <img src="shivani.jpg" alt="Shivani Pal">
+            <img src="Shivani Pal.png" alt="Shivani Pal">
         </div>
 
         <p>
