web designing end sem file

--- a/product_grid.html
+++ b/product_grid.html
@@ -44,7 +44,7 @@
 
       <article class="card" tabindex="0">
         <div class="media">
-          <img src="bluetooth _speaker.png" alt="Product 2">
+          <img src="bluetoothspeaker.png" alt="Product 2">
         </div>
         <div class="card-body">
           <h2 class="title">Bluetooth Speaker🔊</h2>
@@ -64,7 +64,7 @@
 
       <article class="card" tabindex="0">
         <div class="media">
-          <img src="smart _watch.webp" alt="Product 3">
+          <img src="smartwatch.png" alt="Product 3">
         </div>
         <div class="card-body">
           <h2 class="title">Smartwatch⌚️</h2>
@@ -85,7 +85,7 @@
 
       <article class="card" tabindex="0">
         <div class="media">
-          <img src="laptop sleeve.png" alt="Product 4">
+          <img src="laptop.png" alt="Product 4">
         </div>
         <div class="card-body">
           <h2 class="title">Laptop Sleeve💼</h2>
