--- a/exp-4.html
+++ b/exp-4.html
@@ -1,14 +1,16 @@
-exp-4.        <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hotel Room Booking Form</title>
-  <link rel="stylesheet" href="Booking_form.css">
+  <link rel="stylesheet" href="exp-4.css">
 
 </head>
-<style>
-    body {
+
+<body>
+    <style>
+        body {
   font-family: Arial, sans-serif;
   background: #f2f2f2;
   margin: 0;
@@ -76,9 +78,7 @@ input[type="submit"]:hover,
 input[type="reset"]:hover {
   background-color: #003580;
 }
-</style>
-
-<body>
+    </style>
 
   <h1>🏨 Hotel Room Booking Form</h1>
 
