changes in project

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Contact Us - Dream Interior Design</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleproject.css">
 </head>
 <body>
     <!-- Header -->
