--- a/homepage.html
+++ b/homepage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Dream Interior Design - Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleproject.css">
     <link rel="stylesheet" href="homepage.html">
     <link rel="stylesheet" href="about_page.html">
     <link rel="stylesheet" href="services.html">
