--- a/about_page.html
+++ b/about_page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>About Us - Dream Interior Design</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleproject.css">
 </head>
 <body>
     <!-- Header -->
