--- a/services.html
+++ b/services.html
@@ -1,8 +1,8 @@
-services.                          <!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
     <title>Services - Dream Interior Design</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleproject.css">
     <link rel="stylesheet" href="homepage.html">
     <link rel="stylesheet" href="about_page.html">
     <link rel="stylesheet" href="services.html">
